Used chrome.storage.get in the popup window (needs to be styled)

--- a/popup.html
+++ b/popup.html
@@ -85,6 +85,7 @@
         
     </style>
 </head>
+<script src="popup.js"></script>
 <body>
     <header>
         <img src="images/logo-25x25.png" class="center">
@@ -94,7 +95,7 @@
     <section>
         <h1 class="smaller-text">&lt; Your Saved Snippets &gt;</h1>
         <nav>
-            <ul>
+            <ul class="listSnippets">
             </ul>
         </nav>
     </section>
