--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@100;300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@100;300;500&display=swap" rel="stylesheet">
     <title>Snibbet</title>
     <style>
         html, body {
@@ -27,6 +27,7 @@
             font-family: 'Urbanist', sans-serif;
             color: #2345b6;
             font-size: xx-large;
+            font-weight: 300;
             text-align: center;
         }
         section {
@@ -62,7 +63,7 @@
             display: inline-block;  
             list-style: none;
             margin: auto;
-            padding: 0;
+            padding: 0px 0px 10px 0px;
         }
         ::-webkit-scrollbar {
             width: 10px;
@@ -105,6 +106,23 @@
         code {
             word-break: break-all;
             white-space: normal;
+        }
+        .controlbuttons {
+            border-radius: 4px;
+            border: 3px solid;
+            padding: 3px;
+            background-color: #FFF;
+            font-family: 'Urbanist', 'sans-serif';
+            font-weight: 500;
+        }
+        .removeBtn {
+            margin-right: 5px;
+            border-color: #8d2abb9c;
+            color: #bc62e6;
+        }
+        .removeBtn:hover {
+            background-color: #ffe0ef9c;
+            border-color: #6b208d9c
         }
 
         
