Updated README document

--- a/popup.html
+++ b/popup.html
@@ -132,7 +132,7 @@
 <body>
     <header>
         <img src="images/logo-25x25.png" class="center">
-        <h1 class="titleExtension">Snibbet Code</h1>
+        <h1 class="titleExtension">Snibbit Code</h1>
     </header>
     <div class="spacer layer1"></div>
     <section>
