final stylistic touches

--- a/popup.html
+++ b/popup.html
@@ -122,15 +122,17 @@
         }
         .removeBtn:hover {
             background-color: #ffe0ef9c;
-            border-color: #6b208d9c
+            border-color: #6b208d9c;
+            transition: 0.9s;
         }
         .goToBtn {
-            border-color: #1f3fa7;
+            border-color: #264dce;
             color: #2952db;
         }
         .goToBtn:hover {
             background-color: #c1cfff81;
-            border-color: #1b368f;
+            border-color: #2243b1;
+            transition: 0.9s;
         }
 
         
