--- a/popup.html
+++ b/popup.html
@@ -102,6 +102,7 @@
             background-color: rgb(230, 228, 228);
             padding: 3px;
             border-radius: 3px;
+            white-space: pre-wrap;
         }
         .controlbuttons {
             border-radius: 4px;
